{
    "name": "Teste2",
    "maps": [
        {
            "name": "Player",
            "id": "b69155d8-9328-4102-9dfc-4142f8d03964",
            "actions": [
                {
                    "name": "Horizontal",
                    "id": "9ba95e3c-bc52-4690-bcc3-7fda50a96d5d",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Vertical",
                    "id": "fce1583d-a918-4ead-b81b-b524bd6aa5c8",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Fire",
                    "id": "dbdc0b09-6dbd-4da8-b6eb-4d6917925643",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Aim",
                    "id": "171af739-8376-450d-8422-17299c7899a8",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Interactions",
                    "id": "a3fbe7de-5c70-4833-802b-46402e8c107e",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Reload",
                    "id": "017a17fd-2843-4fbf-910f-28961d40fbd1",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Crouch",
                    "id": "9e538d0e-c55b-4acd-8bcd-9a893c2e8b78",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Run",
                    "id": "36b19de4-a8fa-4d72-8270-2b8bd2af4747",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "Jump",
                    "id": "883f7310-0c73-42d3-86d6-2576fdf1d5ad",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "MouseX",
                    "id": "83750f25-cc12-4ff3-9109-0f16b0609e27",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "MouseY",
                    "id": "01d697f1-2347-41e3-96d9-92b3612ace67",
                    "expectedControlLayout": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "path": "Axis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "negative",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Axis",
                    "path": "Axis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "negative",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Horizontal",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Axis",
                    "path": "Axis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "negative",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Axis",
                    "path": "Axis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "negative",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Vertical",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press,PressAndRelease",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Fire",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Fire",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Aim",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Aim",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/t",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Interactions",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Interactions",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Reload",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Reload",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Crouch",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Crouch",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Run",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Run",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Jump",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepadi",
                    "action": "Jump",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseX",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "positive",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MouseY",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "basedOn": "",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepadi",
            "basedOn": "",
            "bindingGroup": "Gamepadi",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}